Version 3.8

Fixed Russian roulette ray termination, which was doing the opposite of
what it should have been doing, resulting in overestimated values below
minimum ray sampling weight (serious).

Changed mksource to use 98th percentile (rather than 99th) for threshold.

(Above changes included in 3.7.1 patch release.)

Eliminated writing of EXPOSURE= line in ra_tiff -r when source TIFF
does not have STONITS set.

Fixed bug in ambient calculation that caused black values for multiple
bounces in some scenes.  Thanks to Mark Stock for creating and sharing
the sophisticated test scene that demonstrated this problem.

Fixed bug in antimatter using Russian Roulette sampling.

(Above changes included in 3.7.2 patch release 22 Aug 2005.)

Created fieldcomb script to combine alternate fields in a rendering
sequence.  (Development generously sponsored by Iebele Abel.)

Added missing preload of mesh objects for more efficient memory use
during parallel rendering -- this was a serious oversight.

Created ran2tiff program to automate exposure setting of animation
sequences using a moving histogram in combination with pcond, and
converting frames to TIFF.

Eliminated SPEED macro from makeall and source tree.

Added -pj option to vwrays to allow jittering of sample locations.

Fixed bug in rtcontrib where it occasionally missed writing the
final bin file.  (Pretty serious, actually.)

Added -Dfseeko=fseek to MACH= line for linux, as fseeko(3) seems to be
broken in current versions of Linux.  (Need to remove this later.)

Rearranged struct's for better efficiency on 64-bit architectures.

Added -i option to rlam so it works with binary input formats.

Added rtcontrib -bn option to specify number of bins and fixed bug
in recovery of files containing multiple values per record.

Added rtcontrib -fo option to write over existing files, which it now
refuses to do without this option.

Made rtcontrib flush output when handed a zero-length ray vector,
to match behavior of rtrace.